--- a/reference.bib
+++ b/reference.bib
@@ -1,5 +1,34 @@
 % Encoding: UTF-8
-
+@article{pont2016supervised,
+  title={Supervised evaluation of image segmentation and object proposal techniques},
+  author={Pont-Tuset, Jordi and Marques, Ferran},
+  journal={IEEE transactions on pattern analysis and machine intelligence},
+  volume={38},
+  number={7},
+  pages={1465--1478},
+  year={2016},
+  publisher={IEEE}
+}
+@article{martin2004learning,
+  title={Learning to detect natural image boundaries using local brightness, color, and texture cues},
+  author={Martin, David R and Fowlkes, Charless C and Malik, Jitendra},
+  journal={IEEE transactions on pattern analysis and machine intelligence},
+  volume={26},
+  number={5},
+  pages={530--549},
+  year={2004},
+  publisher={IEEE}
+}
+@article{martin2004learning,
+  title={The pascal visual object classes (voc) challenge},
+  author={Everingham, Mark and Van Gool, Luc and Williams, Christopher KI and Winn, John and Zisserman, Andrew},
+  journal={International journal of computer vision},
+  volume={88},
+  number={2},
+  pages={303--338},
+  year={2010},
+  publisher={Springer}
+}
 @article{OnAVOS,
   title={Online adaptation of convolutional neural networks for video object segmentation},
   author={Voigtlaender, Paul and Leibe, Bastian},
