--- a/datasets.tex
+++ b/datasets.tex
@@ -3,6 +3,6 @@
 \subsection{Datasets}
 \paragraph{Youtube-Objects~\cite{prest2012learning}} 
 
-\paragraph{DAVIS~\cite{Perazzi2016,PontTuset2017,ponttuset2018}}
+\paragraph{DAVIS~\cite{DAVIS2016,DAVIS2017,DAVIS2018}}
 
-\paragraph{SegTrack~\cite{li2013video}}
+\paragraph{SegTrack~\cite{SegTrack}}
