--- a/reference.bib
+++ b/reference.bib
@@ -281,7 +281,7 @@
 
 % VOS Benchmark
 
-@InProceedings{Perazzi2016Benchmark,
+@InProceedings{DAVIS2016,
   author    = {F. Perazzi and J. Pont-Tuset and B. McWilliams and L. {Van Gool} and M. Gross and A. Sorkine-Hornung},
   title     = {A Benchmark Dataset and Evaluation Methodology for Video Object Segmentation},
   booktitle = {CVPR},
@@ -289,7 +289,7 @@
   groups    = {Benchmark, Video Object Segmentation},
 }
 
-@Article{Pont-Tuset20172017,
+@Article{DAVIS2017,
   author  = {Jordi Pont-Tuset and Federico Perazzi and Sergi Caelles and Pablo Arbel\'aez and Alexander Sorkine-Hornung and Luc {Van Gool}},
   title   = {The 2017 DAVIS Challenge on Video Object Segmentation},
   journal = {arXiv preprint arXiv:1704.00675},
@@ -297,7 +297,7 @@
   groups  = {Benchmark, Video Object Segmentation},
 }
 
-@Article{Pont-Tuset20182018,
+@Article{DAVIS2018,
   author  = {Jordi Pont-Tuset and Sergi Caelles and Federico Perazzi and Alberto Montes and Kevis-Kokitsi Maninis and Yuhua Chen and Luc {Van Gool}},
   title   = {The 2018 DAVIS Challenge on Video Object Segmentation},
   journal = {arXiv preprint arXiv:1803.00557},
@@ -312,7 +312,7 @@
   year    = {2018},
 }
 
-@InProceedings{He2016Deep,
+@InProceedings{ResNet,
   author    = {He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
   title     = {Deep residual learning for image recognition},
   booktitle = {CVPR},
@@ -332,7 +332,7 @@
   publisher = {IEEE},
 }
 
-@InProceedings{Li2013Video,
+@InProceedings{SegTrack,
   author    = {Li, Fuxin and Kim, Taeyoung and Humayun, Ahmad and Tsai, David and Rehg, James M},
   title     = {Video segmentation by tracking many figure-ground segments},
   booktitle = {ICCV},
