--- a/reference.bib
+++ b/reference.bib
@@ -9,6 +9,14 @@
   year={2016},
   publisher={IEEE}
 }
+@inproceedings{jain2014supervoxel,
+  title={Supervoxel-consistent foreground propagation in video},
+  author={Jain, Suyog Dutt and Grauman, Kristen},
+  booktitle={European Conference on Computer Vision},
+  pages={656--671},
+  year={2014},
+  organization={Springer}
+}
 @article{martin2004learning,
   title={The pascal visual object classes (voc) challenge},
   author={Everingham, Mark and Van Gool, Luc and Williams, Christopher KI and Winn, John and Zisserman, Andrew},
