add backbone network and architecture

--- a/reference.bib
+++ b/reference.bib
@@ -1,4 +1,87 @@
 % Encoding: UTF-8
+@inproceedings{Long2015Fully,
+  title={Fully convolutional networks for semantic segmentation},
+  author={Long, Jonathan and Shelhamer, Evan and Darrell, Trevor},
+  booktitle={IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={3431-3440},
+  year={2015},
+}
+
+@article{SegNet,
+  title={SegNet: A Deep Convolutional Encoder-Decoder Architecture for Scene Segmentation},
+  author={Badrinarayanan, Vijay and Kendall, Alex and Cipolla, Roberto},
+  journal={IEEE Transactions on Pattern Analysis Machine Intelligence},
+  year={2017},
+}
+
+@article{Szegedy-GoogLeNet,
+  title={Going deeper with convolutions},
+  author={Szegedy, Christian and Liu, Wei and Jia, Yangqing and Sermanet, Pierre and Reed, Scott and Anguelov, Dragomir and Erhan, Dumitru and Vanhoucke, Vincent and Rabinovich, Andrew},
+  pages={1-9},
+  year={2014},
+}
+
+@article{Simonyan-VGG,
+  title={Very Deep Convolutional Networks for Large-Scale Image Recognition},
+  author={Simonyan, Karen and Zisserman, Andrew},
+  journal={Computer Science},
+  year={2014},
+}
+@inproceedings{Krizhevsky2012ImageNet,
+  title={ImageNet classification with deep convolutional neural networks},
+  author={Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E.},
+  booktitle={International Conference on Neural Information Processing Systems},
+  pages={1097-1105},
+  year={2012},
+}
+@article{Veit2016Residual,
+  title={Residual Networks Behave Like Ensembles of Relatively Shallow Networks},
+  author={Veit, Andreas and Wilber, Michael and Belongie, Serge},
+  journal={Advances in Neural Information Processing Systems},
+  year={2016},
+}
+
+@inproceedings{He-Resnet,
+  title={Deep Residual Learning for Image Recognition},
+  author={He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+  booktitle={IEEE Conference on Computer Vision and Pattern Recognition},
+  pages={770-778},
+  year={2016},
+}
+@article{xie2017aggregated,
+  title={Aggregated Residual Transformations for Deep Neural Networks},
+  author={Xie, Saining and Girshick, Ross and Dollar, Piotr and Tu, Zhuowen and He, Kaiming},
+  pages={5987-5995},
+  year={2016},
+}
+@article{huang2016densely,
+  title={Densely Connected Convolutional Networks},
+  author={Huang, Gao and Liu, Zhuang and Maaten, Laurens Van Der and Weinberger, Kilian Q.},
+  year={2016},
+}
+@article{Lecun2014Backpropagation,
+  title={Backpropagation Applied to Handwritten Zip Code Recognition},
+  author={Lecun, Y. and Boser, B. and Denker, J. S. and Henderson, D. and Howard, R. E. and Hubbard, W. and Jackel, L. D.},
+  journal={Neural Computation},
+  volume={1},
+  number={4},
+  pages={541-551},
+  year={2014},
+}
+@article{Schroff2015FaceNet,
+  title={FaceNet: A Unified Embedding for Face Recognition and Clustering},
+  author={Schroff, Florian and Kalenichenko, Dmitry and Philbin, James},
+  pages={815-823},
+  year={2015},
+}
+@inproceedings{Ren2015Faster,
+  title={Faster R-CNN: towards real-time object detection with region proposal networks},
+  author={Ren, Shaoqing and He, Kaiming and Girshick, Ross and Sun, Jian},
+  booktitle={International Conference on Neural Information Processing Systems},
+  pages={91-99},
+  year={2015},
+}
+
 @article{pont2016supervised,
   title={Supervised evaluation of image segmentation and object proposal techniques},
   author={Pont-Tuset, Jordi and Marques, Ferran},
@@ -393,14 +476,6 @@
   groups  = {Misc},
 }
 
-@InProceedings{Xie2017Aggregated,
-  author       = {Xie, Saining and Girshick, Ross and Doll{\'a}r, Piotr and Tu, Zhuowen and He, Kaiming},
-  title        = {Aggregated residual transformations for deep neural networks},
-  booktitle    = {CVPR},
-  year         = {2017},
-  groups       = {Classification},
-}
-
 @InProceedings{Wang2018Non,
   author    = {Wang, Xiaolong and Girshick, Ross and Gupta, Abhinav and He, Kaiming},
   title     = {Non-local Neural Networks},
@@ -555,14 +630,6 @@
   booktitle = {CVPR},
   year      = {2016},
   groups    = {Instance Segmentation},
-}
-
-@InProceedings{Ren2015Faster,
-  author    = {Ren, Shaoqing and He, Kaiming and Girshick, Ross and Sun, Jian},
-  title     = {Faster r-cnn: Towards real-time object detection with region proposal networks},
-  booktitle = {NIPS},
-  year      = {2015},
-  groups    = {Detection},
 }
 
 @InProceedings{Dai2016R,
@@ -737,14 +804,6 @@
   groups    = {Pose Estimation},
 }
 
-@InProceedings{Veit2016Residual,
-  author    = {Veit, Andreas and Wilber, Michael J and Belongie, Serge},
-  title     = {Residual networks behave like ensembles of relatively shallow networks},
-  booktitle = {NIPS},
-  year      = {2016},
-  groups    = {Classification},
-}
-
 @InProceedings{Cao2017Realtime,
   author    = {Cao, Zhe and Simon, Tomas and Wei, Shih-En and Sheikh, Yaser},
   title     = {Realtime multi-person 2d pose estimation using part affinity fields},
@@ -792,18 +851,6 @@
   year      = {2017},
   groups    = {Pose Estimation},
   publisher = {Pre-print},
-}
-
-@Article{Badrinarayanan2017Segnet:,
-  author    = {Badrinarayanan, Vijay and Kendall, Alex and Cipolla, Roberto},
-  title     = {Segnet: A deep convolutional encoder-decoder architecture for image segmentation},
-  journal   = {TPAMI},
-  year      = {2017},
-  volume    = {39},
-  number    = {12},
-  pages     = {2481--2495},
-  groups    = {Semantic Segmentation},
-  publisher = {IEEE},
 }
 
 @InProceedings{Dai2017Deformable,
@@ -862,13 +909,6 @@
   groups    = {Instance Segmentation},
 }
 
-@InProceedings{Krizhevsky2012Imagenet,
-  author    = {Krizhevsky, Alex and Sutskever, Ilya and Hinton, Geoffrey E},
-  title     = {Imagenet classification with deep convolutional neural networks},
-  booktitle = {NIPS},
-  year      = {2012},
-}
-
 @Article{Sermanet2013Overfeat:,
   author  = {Sermanet, Pierre and Eigen, David and Zhang, Xiang and Mathieu, Micha{\"e}l and Fergus, Rob and LeCun, Yann},
   title   = {Overfeat: Integrated recognition, localization and detection using convolutional networks},
@@ -907,14 +947,6 @@
   booktitle = {CVPR},
   year      = {2017},
   groups    = {Unsupervised VOS},
-}
-
-@InProceedings{Long2015Fully,
-  author    = {Long, Jonathan and Shelhamer, Evan and Darrell, Trevor},
-  title     = {Fully convolutional networks for semantic segmentation},
-  booktitle = {CVPR},
-  year      = {2015},
-  groups    = {Semantic Segmentation},
 }
 
 @InProceedings{Ronneberger2015U,
