--- a/reference.bib
+++ b/reference.bib
@@ -329,13 +329,13 @@
 
 @InProceedings{Tokmakov2017Learning,
   author    = {Tokmakov, P. and Alahari, K. and Schmid, C.},
-  title     = {{Learning Video Object Segmentation with Visual Memory}},
+  title     = {Learning Video Object Segmentation with Visual Memory},
   booktitle = {ICCV},
   year      = {2017},
   groups    = {Unsupervised VOS, Video Object Segmentation},
 }
 
-@InProceedings{Jain2017FusionSeg:,
+@InProceedings{Jain2017FusionSeg,
   author    = {Jain, Suyog and Xiong, Bo and Grauman, Kristen},
   title     = {FusionSeg: Learning to combine motion and appearance for fully automatic segmention of generic objects in videos},
   booktitle = {CVPR},
@@ -939,14 +939,6 @@
   booktitle = {ICCV},
   year      = {2015},
   groups    = {Misc},
-}
-
-@InProceedings{Tokmakov2017Learninga,
-  author    = {Tokmakov, P. and Alahari, K. and Schmid, C.},
-  title     = {Learning Motion Patterns in Videos},
-  booktitle = {CVPR},
-  year      = {2017},
-  groups    = {Unsupervised VOS},
 }
 
 @InProceedings{Ronneberger2015U,
