--- a/reference.bib
+++ b/reference.bib
@@ -334,6 +334,30 @@
   year      = {2017},
   groups    = {Unsupervised VOS, Video Object Segmentation},
 }
+@inproceedings{pinheiro2016learning,
+  title={Learning to refine object segments},
+  author={Pinheiro, Pedro O and Lin, Tsung-Yi and Collobert, Ronan and Doll{\'a}r, Piotr},
+  booktitle={European Conference on Computer Vision},
+  pages={75--91},
+  year={2016},
+  organization={Springer}
+}
+@inproceedings{brox2009large,
+  title={Large displacement optical flow},
+  author={Brox, Thomas and Bregler, Christoph and Malik, Jitendra},
+  booktitle={Computer Vision and Pattern Recognition, 2009. CVPR 2009. IEEE Conference on},
+  pages={41--48},
+  year={2009},
+  organization={IEEE}
+}
+
+@InProceedings{LMPV,
+  author    = {Tokmakov, P.},
+  title     = {Learning Motion Pattern in Video},
+  booktitle = {arxiv},
+  year      = {2017},
+  groups    = {Unsupervised VOS, Video Object Segmentation},
+}
 
 @InProceedings{Jain2017FusionSeg,
   author    = {Jain, Suyog and Xiong, Bo and Grauman, Kristen},
@@ -893,13 +917,6 @@
   groups  = {Semantic Segmentation},
 }
 
-@InProceedings{Pinheiro2016Learning,
-  author       = {Pinheiro, Pedro O and Lin, Tsung-Yi and Collobert, Ronan and Doll{\'a}r, Piotr},
-  title        = {Learning to refine object segments},
-  booktitle    = {ECCV},
-  year         = {2016},
-  groups       = {Instance Segmentation},
-}
 
 @InProceedings{Pinheiro2015Learning,
   author    = {Pinheiro, Pedro O and Collobert, Ronan and Doll{\'a}r, Piotr},
