--- a/reference.bib
+++ b/reference.bib
@@ -82,6 +82,15 @@
   year={2015},
 }
 
+@inproceedings{zhang2013video,
+  title={Video object segmentation through spatially accurate and temporally dense extraction of primary object regions},
+  author={Zhang, Dong and Javed, Omar and Shah, Mubarak},
+  booktitle={Computer Vision and Pattern Recognition (CVPR), 2013 IEEE Conference on},
+  pages={628--635},
+  year={2013},
+  organization={IEEE}
+}
+
 @article{pont2016supervised,
   title={Supervised evaluation of image segmentation and object proposal techniques},
   author={Pont-Tuset, Jordi and Marques, Ferran},
