--- a/reference.bib
+++ b/reference.bib
@@ -7,6 +7,60 @@
   year={2015},
 }
 
+@inproceedings{ciresan2012deep,
+  title={Deep neural networks segment neuronal membranes in electron microscopy images},
+  author={Ciresan, Dan and Giusti, Alessandro and Gambardella, Luca M and Schmidhuber, J{\"u}rgen},
+  booktitle={Advances in neural information processing systems},
+  pages={2843--2851},
+  year={2012}
+}
+
+@inproceedings{ess2009segmentation,
+  title={Segmentation-Based Urban Traffic Scene Understanding.},
+  author={Ess, Andreas and M{\"u}ller, Tobias and Grabner, Helmut and Van Gool, Luc J},
+  booktitle={BMVC},
+  volume={1},
+  pages={2},
+  year={2009}
+}
+@article{ning2005toward,
+  title={Toward automatic phenotyping of developing embryos from videos},
+  author={Ning, Feng and Delhomme, Damien and LeCun, Yann and Piano, Fabio and Bottou, L{\'e}on and Barbano, Paolo Emilio},
+  journal={IEEE Transactions on Image Processing},
+  volume={14},
+  number={9},
+  pages={1360--1371},
+  year={2005},
+  publisher={IEEE}
+}
+
+@article{farabet2013learning,
+  title={Learning hierarchical features for scene labeling},
+  author={Farabet, Clement and Couprie, Camille and Najman, Laurent and LeCun, Yann},
+  journal={IEEE transactions on pattern analysis and machine intelligence},
+  volume={35},
+  number={8},
+  pages={1915--1929},
+  year={2013},
+  publisher={IEEE}
+}
+
+@inproceedings{cordts2016cityscapes,
+  title={The cityscapes dataset for semantic urban scene understanding},
+  author={Cordts, Marius and Omran, Mohamed and Ramos, Sebastian and Rehfeld, Timo and Enzweiler, Markus and Benenson, Rodrigo and Franke, Uwe and Roth, Stefan and Schiele, Bernt},
+  booktitle={Proceedings of the IEEE conference on computer vision and pattern recognition},
+  pages={3213--3223},
+  year={2016}
+}
+@inproceedings{geiger2012we,
+  title={Are we ready for autonomous driving? the kitti vision benchmark suite},
+  author={Geiger, Andreas and Lenz, Philip and Urtasun, Raquel},
+  booktitle={Computer Vision and Pattern Recognition (CVPR), 2012 IEEE Conference on},
+  pages={3354--3361},
+  year={2012},
+  organization={IEEE}
+}
+
 @article{SegNet,
   title={SegNet: A Deep Convolutional Encoder-Decoder Architecture for Scene Segmentation},
   author={Badrinarayanan, Vijay and Kendall, Alex and Cipolla, Roberto},
